typestate-proc-macro/tests/fail/duplicate_state_attr.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {
    #[automaton]
    struct S {}

    #[state]
    #[state]
    struct A {}
}

fn main() {}